<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/head_layout_height"
            android:paddingStart="@dimen/head_paddingStart"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white_head"
            android:textSize="@dimen/main_buttons_text"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/search"
                android:layout_marginBottom="@dimen/main_buttons_margin_bottom"
                android:text="@string/search_button"
                app:icon="@drawable/search"
                style="@style/MainActivityButtons"
                />

            <Button
                android:id="@+id/media"
                android:layout_marginBottom="@dimen/main_buttons_margin_bottom"
                android:text="@string/media_button"
                app:icon="@drawable/media_icon"
                style="@style/MainActivityButtons"
                />

            <Button
                android:id="@+id/settings"
                android:layout_marginBottom="12dp"
                android:text="@string/settings_button"
                app:icon="@drawable/settings_icon"
                style="@style/MainActivityButtons"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>