<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/head_layout_height"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/back_button"
                android:layout_height="@dimen/back_button"
                android:backgroundTint="@color/white"
                android:src="@drawable/back_button"
                android:contentDescription="@string/back_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/head_paddingStart"
                android:text="@string/settings_button"
                android:textColor="@color/settings_text_black"
                android:textSize="@dimen/main_buttons_text" />


        </LinearLayout>


        <Switch
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layouts_height"
            android:layout_marginTop="24dp"
            android:paddingStart="@dimen/settings_padding_start"
            android:text="@string/black_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text"
            app:showText="true" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layouts_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/settings_padding_start"
                android:paddingTop="@dimen/settings_top_padding"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text" />

            <ImageView
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/settings_icon_margin"
                android:layout_marginEnd="@dimen/settings_icon_marginEnd"
                android:src="@drawable/share_button" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layouts_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/settings_padding_start"
                android:paddingTop="@dimen/settings_top_padding"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text" />

            <ImageView
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/settings_icon_margin"
                android:layout_marginEnd="@dimen/settings_icon_marginEnd"
                android:src="@drawable/support_button" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layouts_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/settings_padding_start"
                android:paddingTop="@dimen/settings_top_padding"
                android:text="@string/agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text" />

            <ImageView
                android:layout_width="@dimen/settings_icon_size"
                android:layout_height="@dimen/settings_icon_size"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/settings_icon_margin"
                android:layout_marginEnd="@dimen/settings_icon_marginEnd"
                android:src="@drawable/agreement_button" />

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>